--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,11 @@
 JWT_SECRET=os76tBMLQdRohq
 PORT=4000
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 POSTGRES_DB=laporin_db
 POSTGRES_USER=laporin
 POSTGRES_PASSWORD=rahasia
+REDIS_HOST=localhost
+REDIS_PORT=6379
+TELEGRAM_TOKEN=rahasia
+API_URL=https://luring.rrmdn.dev
