--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/faker": "^4.1.7",
+    "@types/i18n": "^0.8.6",
     "@types/jsonwebtoken": "^8.3.5",
+    "@types/pg": "^7.11.2",
+    "@types/shortid": "^0.0.29",
     "@types/uuid": "^3.4.6",
     "apollo-server-express": "^2.9.9",
     "dotenv": "^8.2.0",
@@ -17,8 +20,14 @@
     "faker": "^4.1.0",
     "graphql": "^14.5.8",
     "graphql-import": "^0.7.1",
+    "i18n": "^0.8.4",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^7.12.1",
+    "pg": "^7.13.0",
+    "shortid": "^2.2.15",
+    "sql-tag": "^1.0.1",
+    "telegraf": "^3.33.3",
+    "telegraf-session-redis": "^5.1.0",
+    "ts-jest": "^24.2.0",
     "ts-node": "^8.5.0",
     "typescript": "^3.7.2",
     "uuid": "^3.3.3"
@@ -28,11 +37,15 @@
     "@graphql-codegen/introspection": "1.8.3",
     "@graphql-codegen/typescript": "1.8.3",
     "@graphql-codegen/typescript-resolvers": "1.8.3",
+    "@types/jest": "^24.0.23",
+    "jest": "^24.9.0",
     "prettier": "^1.19.1",
+    "telegram-test-api": "^2.4.2",
     "ts-node-dev": "^1.0.0-pre.44"
   },
   "scripts": {
     "start": "ts-node src/server.ts",
+    "test": "NODE_ENV=test jest",
     "dev": "ts-node-dev src/server.ts",
     "generate": "graphql-codegen --config codegen.yml && yarn format",
     "format": "prettier --config .prettierrc.yml --write './**/*.{graphql,ts,json}'"
