--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,4 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 TELEGRAM_TOKEN=rahasia
 API_URL=https://luring.rrmdn.dev
+PUSH_GATEWAY_URL=http://localhost:9091
