--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,24 @@ services:
     env_file:
       - .env
     ports:
-    - "5432:5432"
+      - '5432:5432'
   redis:
     image: redis
     env_file:
       - .env
     ports:
-    - "6379:6379"
+      - '6379:6379'
+  prometheus:
+    image: prom/prometheus
+    volumes: 
+      - './prometheus.yml:/etc/prometheus/prometheus.yml'
+    env_file:
+      - .env
+    ports:
+      - '9090:9090'
+  pushgateway:
+    image: prom/pushgateway
+    env_file:
+      - .env
+    ports:
+      - '9091:9091'
