--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i18n": "^0.8.4",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.13.0",
+    "prom-client": "^11.5.3",
     "shortid": "^2.2.15",
     "sql-tag": "^1.0.1",
     "telegraf": "^3.33.3",
