--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/shortid": "^0.0.29",
     "@types/uuid": "^3.4.6",
     "apollo-server-express": "^2.9.9",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
