--- a/prometheus.yml
+++ b/prometheus.yml
@@ -19,6 +19,5 @@ scrape_configs:
   scheme: http
   static_configs:
   - targets:
-    - localhost:9090
-    - pushgateway:9091
+    - host.docker.internal:4000
   
