provide graphql queries

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,4 @@ REDIS_PORT=6379
 TELEGRAM_TOKEN=rahasia
 API_URL=https://luring.rrmdn.dev
 PUSH_GATEWAY_URL=http://localhost:9091
+PROMETHEUS_API_URL=http://localhost:9090/api
