--- a/codegen.yml
+++ b/codegen.yml
@@ -6,6 +6,9 @@ generates:
     plugins:
       - 'typescript'
       - 'typescript-resolvers'
+    config:
+      defaultMapper: Partial<{T}>
+      contextType: ../resolvers#Context
   ./graphql.schema.json:
     plugins:
       - 'introspection'
