--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/faker": "^4.1.7",
+    "@types/graphql-type-json": "^0.3.2",
     "@types/i18n": "^0.8.6",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/pg": "^7.11.2",
     "@types/shortid": "^0.0.29",
     "@types/uuid": "^3.4.6",
     "apollo-server-express": "^2.9.9",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "graphql": "^14.5.8",
     "graphql-import": "^0.7.1",
+    "graphql-type-json": "^0.3.1",
     "i18n": "^0.8.4",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.13.0",
