fix prometheus data permission

--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -24,6 +24,7 @@ services:
       - '6379:6379'
   prometheus:
     image: prom/prometheus
+    user: 'root'
     volumes: 
       - './prometheus.yml:/etc/prometheus/prometheus.yml'
       - './data/prometheus:/prometheus'
