--- a/client/package.json
+++ b/client/package.json
@@ -8,19 +8,23 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/query-string": "^6.3.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-leaflet": "^2.5.0",
     "@types/react-map-gl": "^5.0.4",
+    "@types/string-similarity": "^3.0.0",
     "apollo-boost": "^0.4.7",
     "immutable": "^4.0.0-rc.12",
     "leaflet": "^1.6.0",
+    "query-string": "^6.10.1",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
     "react-map-gl": "^5.1.5",
     "react-scripts": "3.3.0",
+    "string-similarity": "^4.0.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
